# gfx-hal-tutorials

./: .gitignore  .travis.yml  Cargo.toml  DEV.md  README.md  asciidoc_to_markdown  build.rs  generate_sources  run_all  run_all.sh  run_tests
ci/: build-gfx-master
ci/gfx-master/: Cargo.toml  source_assets
doc/: part-1-triangle.adoc  part-2-push-constants.adoc  part-3-vertex-buffers.adoc  part-4-uniforms.adoc
doc/rs/: part-1-triangle.adoc  part-2-push-constants.adoc  part-3-vertex-buffers.adoc  part-4-uniforms.adoc
doc/shaders/: part-1.frag.adoc  part-1.vert.adoc  part-2.frag.adoc  part-2.vert.adoc  part-3.frag.adoc  part-3.vert.adoc  part-4.frag.adoc  part-4.vert.adoc
doc/toml/: Cargo.adoc
source_assets/shaders/: part00.frag  part00.vert  part02.vert  part03.frag  part03.vert  part04.vert  part06.frag  part06.vert
src/: lib.rs  prelude.rs  teapot.rs  utils.rs
