[package]
name = "gfx-hal-tutorials"
version = "0.1.0"
authors = ["Vi <violet@hey.com>"]
edition = "2018"
license = "CC0-1.0"

[dependencies]
bincode = "~1.3.1"
gfx-hal = "=0.6.0"
shaderc = "=0.6.2"
image = "~0.23.12"
serde = { version = "~1.0.115", features = ["derive"] }
winit = "~0.20.0"

[target.'cfg(target_os = "macos")'.dependencies.backend]
package = "gfx-backend-metal"
version = "=0.6.2"

[target.'cfg(windows)'.dependencies.backend]
package = "gfx-backend-dx12"
version = "=0.6.3"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.backend]
package = "gfx-backend-vulkan"
version = "=0.6.1"