[package]
name = "gfx-hal-tutorials"
version = "0.1.0"
authors = ["Claire Harris <wishing.engine@gmail.com>"]

[dependencies]
image = "~0.19.0"
winit = "=0.17.2"

[dependencies.gfx-hal]
git = "https://github.com/gfx-rs/gfx"
branch = "master"


[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
git = "https://github.com/gfx-rs/gfx"
branch = "master"

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
git = "https://github.com/gfx-rs/gfx"
branch = "master"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx"
branch = "master"


[build-dependencies]
glsl-to-spirv = "=0.1.6"
